# Spark

./: .clang-format  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/: Common.h  Test.c  Test.h
engine/src/Spark/: Common.h  Entrypoint.h  Game.h
engine/src/Spark/Core/: Application.c  Application.h  Asserts.h  Logger.c  Logger.h
engine/src/Spark/Platform/: Platform.h  PlatformWindows.c
sandbox/: CMakeLists.txt
sandbox/src/: Game.c  Game.h  main.c
